--- a/React_proj/react-helloworld/src/App.css
+++ b/React_proj/react-helloworld/src/App.css
@@ -6,6 +6,45 @@
   color: fuchsia;
   font-weight: bold;
   text-align: center;
+  background-color: bisque;
+}
+
+.Page {
+  font-weight: bold;
+  text-align: center;
+}
+
+.Nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(5, 3, 79);
+}
+
+.Nav li {
+  float: left;
+}
+
+.Nav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.Nav li a:hover {
+  background-color: rgb(120, 19, 167);
+}
+
+
+.App-footer {
+  color: indigo;
+  font-weight: bold;
+  font-size: large;
+  text-align: center;
+  background-color: cyan;
 }
 
 .App-logo {
@@ -17,6 +56,43 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+.Contact-form {
+  text-align: center;
+  margin: 1% auto;
+}
+
+.Contact-form input {
+  width: 30%;
+  margin: 0.5%;
+}
+
+.Contact-form label {
+  text-align: center;
+  font-weight: bold;
+}
+
+.Contact-form .Message_box {
+  border: #000000;
+  width: 30.5%;
+  display: inline-block;
+}
+
+.Message_box textarea {
+  float: left;
+  width: 99%;
+  height: 133px;
+  margin: 0.5%;
+}
+
+#submit_btn {
+  border: #000000;
+  width: 13%;
+  display: inline-block;
+  margin: 1% 0;
+  color: darkred;
+  height: 2em;
 }
 
 .App-header {
